# LanguageDetectorPytorch

./: README.md  language_detector.py  model.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/: dataset.py  labels.py  utils.py
src/lang_detector/: dataset.py  language_detector.py
src/lang_detector/lang_detector.egg-info/: PKG-INFO  requires.txt  top_level.txt
