[metadata]
name = LanguageDetector
author = Bendeguz Varadi
description = A simple Pytorch implementation of a language classification model.
platforms = linux, osx

[options]
packages =
    LanguageDetector
install_requires =

python_requires = >=3.6
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    flake8-docstrings>=1.6.0
    pep8-naming>=0.12.1

[options.package_data]
my_text_cleaner = py.typed

[flake8]
max-line-length = 100